# watchy_condense_rs

./: .gitignore  Cargo.toml  README.md  notes  test.json
events_notes/: file_created_deleted  main_rs_old
release/: watchy_condense.service
src/: aggs.rs  app.rs  delete_records.rs  elastic.rs  init_logging.rs  latest.rs  main.rs  main_old.rs  message.rs  parse_record.rs
