[package]
name = "watchy_condense_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "8.5.0-alpha.1"
reqwest = "0.12.2"
serde_json = "1.0.115"
tokio = { version = "*", features = ["full"] }
url = "2.5.0"
#tokio = "1.36.0"
